Fixed overflow bug in messages

--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -1,10 +1,8 @@
 #messages .message {
     min-width: 50px;
     max-width: min(85%, 600px);
-    border-radius: var(--border-radius);
     align-self: flex-start;
     word-wrap: break-word;
-    overflow: hidden;
     cursor: pointer;
 }
 
@@ -18,6 +16,7 @@
     align-items: center;
     gap: var(--spacing-small);
     padding: 7px 11px;
+    border-radius: var(--border-radius);
 }
 
 #messages .original-message {
@@ -26,6 +25,16 @@
 
 #messages .translated-message {
     background: var(--bg-tertiary);
+}
+
+#messages .expanded .original-message {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+#messages .expanded .translated-message {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
 
 #messages img {
